--- a/localisation/english/swnd_main_l_english.yml
+++ b/localisation/english/swnd_main_l_english.yml
@@ -1296,7 +1296,7 @@ l_english:
  d_hapes_shipyards:0 "Hapan Royal Shipyards"
  d_hapes_shipyards_desc:0 "Royal Hapan Shipyards are streamlined factories for producing Battle Dragons, Nova Cruisers, Miy'til starfighters, and their various support craft. Like everything else the Hapan Royal Navy builds, they are also architectural monuments to the glory of the Consortium and the Queen Mother, long may she reign."
  d_bothawui_shipyards:0 "Bothawui Shipyards"
- d_bothawui_shipyards_desc:0 "Though famed mostly for espionage, the Bothan Clans maintain a modest antipiracy fleet that is steadily militarizing into an actual navy. As the New Order tightens its grip elsewhere, stronger and more powerful ships take shape unimpeded in these yards."
+ d_bothawui_shipyards_desc:0 "Though famed mostly for espionage, the Bothan Council maintains a modest antipiracy fleet that is steadily militarizing into an actual navy. As the New Order tightens its grip elsewhere, stronger and more powerful ships take shape unimpeded in these yards."
  d_raxus_shipyards:0 "Raxus Shipyards"
  d_raxus_shipyards_desc:0 "Formerly a stronghold of Count Dooku and a center of power for the CIS, Raxus Prime's junk-layered surface and industrially-choked orbital plane are swimming in usable debris, untapped after the Republic's conquest during the Clone Wars. One must just separate the trash from the treasure."
  d_rothana_shipyards:0 "Rothana Heavy Engineering"
