--- a/localisation/english/swnd_names_l_english.yml
+++ b/localisation/english/swnd_names_l_english.yml
@@ -4178,8 +4178,8 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_adjective_BlackSunOrganization:0 "Falleen"
  PRESCRIPTED_adjective_BlackSunOrganization:0 "Black Sun"
  PRESCRIPTED_ruler_name_BlackSunOrganization:0 "Ziton Moj"
- NAME_bothan_council:0 "Bothan Clans"
- format.bothan_council:0 "Bothan Clans"
+ NAME_bothan_council: "Bothan Council"
+ format.bothan_council: "Bothan Council"
  PRESCRIPTED_ship_prefix_BothanCouncil: "BC"
  PRESCRIPTED_species_name_BothanCouncil:0 "Bothan"
  PRESCRIPTED_species_plural_BothanCouncil:0 "Bothans"
