Обновление: 8 июня SWND 0.8.08

--- a/localisation/english/swnd_main_l_english.yml
+++ b/localisation/english/swnd_main_l_english.yml
@@ -3201,6 +3201,7 @@ l_english:
  FRONT_SETTINGS_SWND:0 "Settings"
  FRONT_QUIT_SWND:0 "Exit"
  FRONT_MULTIPLAYER_SWND:0 "Multiplayer"
+ FRONT_COOP_SWND: "Co-op"
  physic_techtree:0 "£physics£ - §BTree§!"
  society_techtree:0 "£society£ - §GTree§!"
  engineer_techtree:0 "£engineering£ - §HTree§!"
@@ -3778,7 +3779,7 @@ l_english:
  RT_ARISTOCRA_FEMALE:0 "$RT_ARISTOCRA$"
  RT_CLAN_SPEAKER:0 "Clan Speaker"
  RT_CLAN_SPEAKER_FEMALE:0 "$RT_CLAN_SPEAKER$"
- RT_BLACK_SUN:0 "Vigo"
+ RT_BLACK_SUN:0 "Underlord"
  RT_BLACK_SUN_FEMALE:0 "$RT_BLACK_SUN$"
  RT_BLACK_SUN_HEIR:0 "Underboss"
  RT_BLACK_SUN_HEIR_FEMALE:0 "$RT_BLACK_SUN_HEIR$"
