--- a/localisation/swnd_wip_bosmeri_l_english.yml
+++ b/localisation/swnd_wip_bosmeri_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
  ### New 4.4.2023 ###
-# Imported from LOTOR with permission
-# Major - The Treasures of Dianth
+ # Imported from LOTOR with permission
+ # Major - The Treasures of Dianth
  swnd_digsite.10.name: "A White City"
  swnd_digsite.10.desc: "While in orbit over §Y[From.GetName]§!, §Y[This.Leader.GetName]§! and their team on [This.GetName] found what appears to be a city made of white stone. Scans show no sign of life, though imaging of the city itself provides what seems to be evidence of a long ago conflict, if not outright war." # this = ship | from = planet
  swnd_digsite.10.desc.no_force_sens: "$swnd_digsite.10.desc$\n\nRegardless, §Y[This.Leader.GetName]§! has concluded that landing and beginning exploration of the city would pose little risk to their safety. Answers as to what happened to the city surely lay in the empty city below, as do any riches and resources left over from the conflict..." # this = ship
@@ -80,3 +80,136 @@
  #Leader Names
  PRESCRIPTED_leader_name_admiralaralani: "Ar'alani"
  PRESCRIPTED_leader_name_eli_vanto: "Eli Vanto"
+
+ ###4 June 2023###
+
+ ## Councilor Names ##
+  councilor_ruler_new_order: "Grand Vizier"
+  councilor_ruler_new_order_female: "$councilor_ruler_new_order$"
+  councilor_ruler_new_order_desc: "The Grand Vizier is the deputy of the Galactic Empire and chief bureaucrat of the Imperial Ruling Council and acts as an intermediary between the Galactic Emperor and high-ranking officials in the Imperial Military as well as the government."
+  councilor_ruler_clone_wars_victor: "Veteran Commander"
+  councilor_ruler_clone_wars_victor_female: "$councilor_ruler_clone_wars_victor_female$"
+  councilor_ruler_clone_wars_victor_desc: "These officers were some of the finest in the Republic and are allowed to resume leadership duties under the Galactic Empire."
+  councilor_rebel_sympathy: "Freedom Fighter"
+  councilor_rebel_sympathy_female: "$councilor_rebel_sympathy$"
+  councilor_rebel_sympathy_desc: "Freedom fighters come from all walks of life and are united by their desire to oppose the Empire."
+  councilor_beacon_of_hope: "Supreme Allied Commander"
+  councilor_beacon_of_hope_female: "$councilor_beacon_of_hope$"
+  councilor_beacon_of_hope_desc: "The Supreme Allied Commander is responsible for overseeing the various branches of the Rebel Alliance military."
+  councilor_hutt_cartel: "Kajidii"
+  councilor_hutt_cartel_female: "$councilor_hutt_cartel$"
+  councilor_hutt_cartel_desc: "The Kajidii is derived from the Hutt concept of Kajidic - a philosophy which guides Hutt life and politics as well as a loose term for any sort of clan, legitimate business, and criminal operations. The Kajidi themselves were leaders of individual kajidics and are subservient to the Hutt Grand Council."
+  councilor_hutt_cartel_no_dlc: "Kajidii"
+  councilor_hutt_cartel_female_no_dlc: "$councilor_hutt_cartel_no_dlc$"
+  councilor_hutt_cartel_no_dlc_desc: "The Kajidii is derived from the Hutt concept of Kajidic - a philosophy which guides Hutt life and politics as well as a loose term for any sort of clan, legitimate business, and criminal operations. The Kajidi themselves were leaders of individual kajidics and subservient to the Hutt Grand Council."
+  councilor_mandalorian: "Arbiter"
+  councilor_mandalorian_female: "$councilor_mandalorian$"
+  councilor_mandalorian_desc: "The title of Arbiter extends back to just after the Great Galactic War. It is an honorable position for any Mandalorian to hold."
+  councilor_mandalorian_clans: "Rally Master"
+  councilor_mandalorian_clans_female: "$councilor_mandalorian$"
+  councilor_mandalorian_clans_desc: "With their namesake taken from both the Neo-Crusaders and Death Watch, the Rally Master are recognized as a figure of authority. While historically associated with the command of ground forces, the Rally Master is looked to by newer recruits for guidance in battle."
+  councilor_mandalorian_khanate: "Al'Ori'Ramikade"
+  councilor_mandalorian_khanate_female: "$councilor_mandalorian_khanate$"
+  councilor_mandalorian_khanate_desc: "Al'Ori'Ramikade is Mando'a for Commander of the Supercommandos. Although its routinely attached as a secondary title to the Mand'alor, Gar Saxon uses it to appeal to those among Clan Saxon and other defectors."
+  councilor_mandalorian_creed: "Zealot"
+  councilor_mandalorian_creed_female: "$councilor_mandalorian_creed$"
+  councilor_mandalorian_creed_desc: "The strictest adherents to the Creed are branded as zealots by outsiders. However, for those that are taken in by Children of the Watch, they embrace the title."
+  councilor_mandalorian_boba: "Bodyguard"
+  councilor_mandalorian_boba_female: "$councilor_mandalorian_boba$"
+  councilor_mandalorian_boba_desc: "The chief enforcer and one of the closest members to the Daimyo. They are responsible for their protection as well as instilling order."
+  councilor_swnd_criminal_heritage: "Enforcer"
+  councilor_swnd_criminal_heritage_female: "$councilor_swnd_criminal_heritage$"
+  councilor_swnd_criminal_heritage_desc: "Enforcers do the dirty work that most crime lords view as beneath them. Shakedowns and intimidation are some of the most routine jobs they handle."
+  councilor_corporate_sector: "Direx"
+  councilor_corporate_sector_female: "$councilor_corporate_sector$"
+  councilor_corporate_sector_desc: "The Direx board, also known as the Executive Directorship Board or Board of Directors, is the executive body of the Corporate Sector Authority. Members on this board are referred to as Direxs and answered directly to the ExO."
+  councilor_corporate_sector_no_dlc: "Direx"
+  councilor_corporate_sector_no_dlc_female: "$councilor_corporate_sector_no_dlc$"
+  councilor_corporate_sector_no_dlc_desc: "The Direx board, also known as the Executive Directorship Board or Board of Directors, is the executive body of the Corporate Sector Authority. Members on this board are referred to as Direxs and answered directly to the ExO."
+  councilor_corellian: "Chief Engineer"
+  councilor_corellian_female: "$councilor_corellian$"
+  councilor_corellian_desc: "A single cheif engineer from the Corellian Engineering Corporation is unmatched, even by the most skilled engineers in the Kuat Drive Yards and Sienar Fleet Systems."
+  councilor_hapes_consortium: "Royal High Commander"
+  councilor_hapes_consortium_female: "$councilor_hapes_consortium$"
+  councilor_hapes_consortium_desc: "The Royal High Commander is the commander-in-chief of the Hapes Consortium's military. The position is usually filled by a veteran commander or an esteemed noble that claims to be of sound military mind."
+  councilor_bothan_spies: "Spymaster"
+  councilor_bothan_spies_female: "$councilor_bothan_spies$"
+  councilor_bothan_spies_desc: "Spymasters are high ranking members of the Bothan Spynet. They are experienced individuals that ran their own operations. They also are responsible for their own operatives, overseeing their missions across the galaxy."
+  councilor_confederate_remnant: "Warlord"
+  councilor_confederate_remnant_female: "$councilor_confederate_remnant$"
+  councilor_confederate_remnant_desc: "Unwilling to surrender and supported by a mixture of local forces and surplus droids, Separatist warlords try to retain some semblence of power and influence."
+  councilor_clone_wars_loser: "Warlord"
+  councilor_clone_wars_loser_female: "$councilor_confederate_remnant$"
+  councilor_clone_wars_loser_desc: "Unwilling to surrender and supported by a mixture of local forces and surplus droids, Separatist warlords try to retain some semblence of power and influence."
+  councilor_trade_federation: "Financial Officer"
+  councilor_trade_federation_female: "$councilor_trade_federation$"
+  councilor_trade_federation_desc: "wip"
+  councilor_trade_federation_no_dlc: "Financial Officer"
+  councilor_trade_federation_no_dlc_female: "$councilor_trade_federation_no_dlc$"
+  councilor_trade_federation_no_dlc_desc: "wip"
+  councilor_naval_tradition: "Viceprex"
+  councilor_naval_tradition_female: "$councilor_naval_tradition$"
+  councilor_naval_tradition_desc: "The Viceprex is a part of the Corporate Sector Authority's command structure serving underneath the Direx Board."
+  councilor_droid_uprising: "wip"
+  councilor_droid_uprising_female: "$councilor_droid_uprising$"
+  councilor_droid_uprising_desc: "wip"
+  councilor_banking_clan: "Director of the Treasury"
+  councilor_banking_clan_female: "$councilor_banking_clan$"
+  councilor_banking_clan_desc: "The Director of the Treasury is responsible for overseeing the creation and management of the Banking Clan's budget as well as taxation."
+  councilor_banking_clan_no_dlc: "Director of the Treasury"
+  councilor_banking_clan_no_dlc_female: "$councilor_banking_clan_no_dlc$"
+  councilor_banking_clan_no_dlc_desc: "The Director of the Treasury is responsible for overseeing the creation and management of the Banking Clan's budget as well as taxation."
+  councilor_rodian_scouts: "Ranger"
+  councilor_rodian_scouts_female: "$councilor_rodian_scouts$"
+  councilor_rodian_scouts_desc: "wip"
+  councilor_trandoshan_tribes: "Huntmaster"
+  councilor_trandoshan_tribes_female: "$councilor_trandoshan_tribes$"
+  councilor_trandoshan_tribes_desc: "wip"
+  councilor_black_sun: "Vigo"
+  councilor_black_sun_female: "$councilor_black_sun$"
+  councilor_black_sun_desc: "From the Old Tionese word for nephew, vigo is a title used by lieutenants within Black Sun's leadership. Never numbering more than nine total and answering directly to the Underlord directly, the title attemps to create a semblance of a famillial bond between leaderhsip."
+  councilor_black_sun_no_dlc: "Vigo"
+  councilor_black_sun_no_dlc_female: "$councilor_black_sun_no_dlc$"
+  councilor_black_sun_no_dlc_desc: "From the Old Tionese word for nephew, vigo is a title used by lieutenants within Black Sun's leadership. Never numbering more than nine total and answering directly to the Underlord directly, the title attemps to create a semblance of a famillial bond between leaderhsip."
+  councilor_twilek_rebels: "Clan Elder"
+  councilor_twilek_rebels_female: "$councilor_twilek_rebels$"
+  councilor_twilek_rebels_desc: "The clan elder is the oldest member of a Twilek family clan."
+  councilor_survival_skills: "Attendant"
+  councilor_survival_skills_female: "$councilor_survivor_skills$"
+  councilor_survival_skills_desc: "wip"
+  councilor_calamari_dynasty: "Noble"
+  councilor_calamari_dynasty_female: "$councilor_calamari_dynasty$"
+  councilor_calamari_dynasty_desc: "Nobles are members of upper class society that come from renouned or wealthy families."
+  councilor_master_shipbuilders: "Master Shipwright"
+  councilor_master_shipbuilders_female: "$councilor_master_shipbuilder$"
+  councilor_master_shipbuilders_desc: "Any being skilled at the construction of starships can call themselves a shipwright. However, only the Mon Calamari can claim the title of master shipwrights."
+  councilor_genetic_experiments: "Director of Public Relations"
+  councilor_genetic_experiments_female: "$councilor_genetic_experiments$"
+  councilor_genetic_experiments_desc: "A representative of the Adasca BioMechanical Corporation of Arkania that specializes in speaking on behalf of the company and their subsidiaries."
+  councilor_chiss_houses: "Speaker"
+  councilor_chiss_houses_female: "$councilor_chiss_houses$"
+  councilor_chiss_houses_desc: "Speakers are heads of one of the Nine Ruling Families of the Chiss Ascendancy. They are the second highest-ranking member of a Ruling Family and act as delegations to the Syndicure. Furthermore they also represented family interests to others."
+  councilor_mining_guild: "Guildmaster"
+  councilor_mining_guild_female: "$councilor_mining_guild$"
+  councilor_mining_guild_desc: "wip"
+  councilor_banking_guild: "Guildmaster"
+  councilor_banking_guild_female: "$councilor_banking_guild$"
+  councilor_banking_guild_desc: "wip"
+  councilor_bounty_hunter_guild: "Guildmaster"
+  councilor_bounty_hunter_guild_female: "$councilor_bounty_hunter_guild$"
+  councilor_bounty_hunter_guild_desc: "wip"
+  councilor_underworld_guild: "Guildmaster"
+  councilor_underworld_guild_female: "$councilor_underworld_guild$"
+  councilor_underworld_guild_desc: "wip"
+  councilor_hutt_elite: "Majordomo"
+  councilor_hutt_elite_female: "$councilor_hutt_elite$"
+  councilor_hutt_elite_desc: "The Majordomo is the chief steward of a great household. For Hutt crimelords, they serve as an intermediary between local officials and often serve very brief terms before vanishing for reasons only known to their Hutt masters."
+  councilor_idyllic_charm: "Aide"
+  councilor_idyllic_charm_female: "$councilor_idyllic_charm$"
+  councilor_idyllic_charm_desc: "Aides are individuals who assist a person of high political position."
+  councilor_house_organa: "Noble"
+  councilor_house_organa_female: "$councilor_house_organa$"
+  councilor_house_organa_desc: "Nobles are members of upper class society that come from renouned or wealthy families. Nobles from House Organa are known for their honesty and honor, as well as their skilled diplomatic abilities."
+  councilor_swnd_crafters: "Chief Engineer"
+  councilor_swnd_crafters_female: "$councilor_swnd_crafters$"
+  councilor_swnd_crafters_desc: "Cheif engineers are masters of their trade, whether it is construciton, design, or general upkeep."
